# ros2-learn

./: .gitignore  Dockerfile  docker-compose.yml  readme.md  start.sh  start_turtle.sh  supervisord.conf
.devcontainer/: devcontainer.json
workspace/: README.md  remote-dev-readme.md  ros2.mdc
workspace/.cursor/rules/: ros2.mdc
workspace/basic_example/: package.xml  setup.cfg  setup.py
workspace/basic_example/basic_example/: publisher.py  subscriber.py
workspace/ros2_example/: .gitignore  Makefile  README.md  ros2_node_rules.md
workspace/ros2_example/.cursor/rules/: pkgs.mdc  ros2-node-rules.mdc
workspace/ros2_example/scripts/: auto_update_paths.py  config.yaml  list_nodes.py
workspace/ros2_example/src/basic_communication/: setup.cfg  setup.py
workspace/ros2_example/src/basic_communication/basic_communication/: publisher.py  subscriber.py
workspace/ros2_example/src/common/common_interfaces/: CMakeLists.txt
workspace/ros2_example/src/common/common_interfaces/srv/: SetCommand.srv
workspace/ros2_example/src/common/ros2_common_utils/: package.xml  setup.cfg
workspace/ros2_example/src/example_pkg/: package.xml  setup.py
workspace/ros2_example/src/example_pkg/example_pkg/: publisher.py
workspace/ros2_example/src/example_pkg/nodes/: utils_example_node.py
workspace/ros2_example/src/examples/example_pkg/: setup.py
workspace/ros2_example/src/examples/turtle_sim_pkg/: package.xml  setup.py
workspace/ros2_example/src/interfaces/common_interfaces/: CMakeLists.txt  package.xml
workspace/ros2_example/src/interfaces/common_interfaces/msg/: Command.msg
workspace/ros2_example/src/interfaces/common_interfaces/srv/: GetStatus.srv
workspace/ros2_example/src/interfaces/common_interfaces_test/: CMakeLists.txt  package.xml
workspace/ros2_example/src/interfaces/common_interfaces_test/msg/: Status.msg
workspace/ros2_example/src/interfaces/learn_ros2_interfaces/: CMakeLists.txt  README.md  package.xml
workspace/ros2_example/src/nodes/learn_ros2/: demo_cancelable_action.py  package.xml  setup.cfg  setup.py
workspace/ros2_example/src/nodes/learn_ros2_basic/: demo_cancelable_action.py  package.xml  setup.cfg  setup.py
workspace/ros2_example/src/nodes/learn_ros2_basic/learn_ros2_basic/01_simple_node/: README.md  main.py
workspace/ros2_example/src/nodes/learn_ros2_basic/learn_ros2_basic/02_topic_message/: README.md  __init__.py  subscriber_node.py  topic_demo.launch.py
workspace/ros2_example/src/nodes/learn_ros2_basic/learn_ros2_basic/03_service_example/: README.md  __init__.py  service_client.py  service_demo.launch.py  service_server.py
workspace/ros2_example/src/nodes/learn_ros2_basic/learn_ros2_basic/04_action_example/: README.md  __init__.py  robot_navigation_example.py  simple_action_server.py
workspace/ros2_example/src/nodes/learn_ros2_basic/learn_ros2_basic/05_cancelable_action_example/: README.md  __init__.py
workspace/ros2_example/src/nodes/learn_ros2_basic/learn_ros2_basic/06_qos_example/: reliability_publisher.py  reliability_subscriber.py
workspace/ros2_example/src/nodes/learn_ros2_basic/learn_ros2_basic/07_cli_tools_example/: README.md  cli_service_server.py
workspace/ros2_example/src/nodes/learn_simulation/: package.xml  setup.cfg  setup.py
workspace/ros2_example/src/pkgs/example_pkg/: README.md  package.xml  setup.py
workspace/ros2_example/src/pkgs/example_pkg2/: package.xml  setup.cfg  setup.py
workspace/ros2_example/src/pkgs/talker_service_demo/: package.xml  setup.cfg  setup.py
workspace/ros2_example/src/ros2_common_utils/: setup.py
workspace/ros2_ws/: makefile  requirements.txt
workspace/ros2_ws/src/my_first_py_pkg/: package.xml  setup.cfg  setup.py
workspace/turtlesim_learn/: Makefile
workspace/turtlesim_learn/scripts/: create_package.py  create_ros2_package.sh
workspace/turtlesim_learn/src/basic_communication/: package.xml
workspace/turtlesim_learn/src/my_robot_controller/: package.xml  setup.py
workspace/turtlesim_learn/src/ros2_template/: package.xml  setup.py
workspace/turtlesim_learn/src/test_nodes/: package.xml  setup.cfg
(+74 files in other folders)
