<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>learn_ros2_basic</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="you@example.com">root</maintainer>
  <license>TODO: License declaration</license>

  <!-- 标准消息依赖 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>
  
  <!-- 自定义接口依赖 -->
  <depend>learn_ros2_basic_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
